GDATemplate/GDATemplate.Documments/Settings Deploy/template-api.yaml
---
# Source: oic/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-api
  labels:
    app.kubernetes.io/name: template-api
    helm.sh/chart: template-api-0.1.0
    app.kubernetes.io/instance: template-api
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: template-api
    app.kubernetes.io/instance: template-api
---
# Source: pua/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-api
  labels:
    app.kubernetes.io/name: template-api
    helm.sh/chart: template-api-0.1.0
    app.kubernetes.io/instance: template-api
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: template-api
      app.kubernetes.io/instance: template-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: template-api
        app.kubernetes.io/instance: template-api
    spec:
      imagePullSecrets:
        - name: harbor-key-9990183
      hostAliases:
      - ip: '10.198.8.101'
        hostnames:
        - 'az9991110.database.windows.net'        
      containers:
        - name: template-api
          image: "timon.cloud.prodesp.sp.gov.br/9990183/template-api:IMAGE_TAG_PLACEHOLDER"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /template-api/health/status
              port: 5000
            initialDelaySeconds: 40
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /template-api/health/status
              port: 5000
            initialDelaySeconds: 40
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
---
# Source: pua/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: template-api
  labels:
    app.kubernetes.io/name: template-api
    helm.sh/chart: template-api-0.1.0
    app.kubernetes.io/instance: template-api
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Tiller
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip

spec:
  rules:
    - host: bolsadopovo.des.sp.gov.br
      http:
        paths:
          - path: /template-api
            backend:
              serviceName: template-api
              servicePort: http
